# Application-for-analyzing-bank-transactions

./: .coverage  .env  .env_template  .flake8  .gitignore  README.md  logging.json  pyproject.toml
src/: logging_config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
